# hlsstream

./: .gitignore  CMakeLists.txt  README.md
android/hlsstream/: .gitignore  build.gradle  settings.gradle
android/hlsstream/gradle/wrapper/: gradle-wrapper.properties
android/hlsstream/src/androidTest/java/com/binodrokkad/hlsstream/: ExampleInstrumentedTest.java
android/hlsstream/src/main/cpp/: CMakeLists.txt
android/hlsstream/src/main/java/com/binodrokkad/hlsstream/: HLSStreamer.java
android/hlsstream/src/test/java/com/binodrokkad/hlsstream/: ExampleUnitTest.java
android/testapp/: settings.gradle
android/testapp/app/: build.gradle
android/testapp/app/src/androidTest/java/com/binodrokkad/testapp/: ExampleInstrumentedTest.java
android/testapp/app/src/main/: AndroidManifest.xml
android/testapp/app/src/main/java/com/binodrokkad/testapp/: MainActivity.java  TestVideoDecoder.java
android/testapp/app/src/main/res/layout/: activity_main.xml
android/testapp/app/src/main/res/values/: strings.xml  themes.xml
android/testapp/app/src/main/res/values-night/: themes.xml
android/testapp/app/src/test/java/com/binodrokkad/testapp/: ExampleUnitTest.java
android/testapp/gradle/wrapper/: gradle-wrapper.properties
example/: HLSExample.cpp
iOS/hlsstream.xcodeproj/: project.pbxproj
macOS/hlsstream.xcodeproj/: project.pbxproj
macOS/hlsstream.xcodeproj/project.xcworkspace/xcuserdata/eno.xcuserdatad/: UserInterfaceState.xcuserstate
macOS/hlsstream.xcodeproj/xcuserdata/eno.xcuserdatad/xcschemes/: xcschememanagement.plist
prebuilt/android/ffmpeg/arm64-v8a/include/: config.h
prebuilt/android/ffmpeg/armeabi-v7a/include/: config.h
prebuilt/android/ffmpeg/x86/include/: config.h
prebuilt/android/ffmpeg/x86_64/include/: config.h
prebuilt/android/libcurl_ssl/include/: Makefile
prebuilt/android/libcurl_ssl/include/curl/: Makefile
prebuilt/iOS/libcurl/lib/: libcurl.4.dylib  libcurl.la
prebuilt/iOS/libcurl/lib/pkgconfig/: libcurl.pc
src/: Common.h  Demuxer.cpp  Demuxer.h  HLSReader.cpp  HLSReader.h  HLSStreamer.cpp  HLSStreamer.h  HTTPHandler.cpp  HTTPHandler.h  LiveManager.cpp  LiveManager.h  PlaylistParser.cpp  PlaylistParser.h  SegmentManager.cpp  SegmentManager.h  WaitCond.h
src/android/: HLSStreamJNI.cpp
windows/: .gitignore  hlsstream.sln
windows/hlsstream/: hlsstream.vcxproj  hlsstream.vcxproj.filters
